syntax = "proto3";

package auth.models.v1;

option go_package = "github.com/vbncursed/medialog/auth-service/internal/pb/models";

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutAllRequest {
  string refresh_token = 1;
}

message AuthResponse {
  uint64 user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message LogoutResponse {}


